--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "dev": "ts-node-dev src/1_presentation/index.ts",
+    "dev": "ts-node-dev src/1_presentation/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,9 +16,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "linqts": "^1.12.6"
+    "body-parser": "1.19.0",
+    "inversify": "^5.0.1",
+    "inversify-express-utils": "6.3.2",
+    "inversify-logger-middleware": "3.1.0",
+    "linqts": "^1.12.6",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@types/body-parser": "1.17.1",
     "@types/express": "^4.16.1",
     "@types/node": "^11.11.3",
     "ts-node-dev": "^1.0.0-pre.32",
