--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
     "body-parser": "1.19.0",
+    "express": "^4.16.4",
     "inversify": "^5.0.1",
     "inversify-express-utils": "6.3.2",
     "inversify-logger-middleware": "3.1.0",
     "linqts": "^1.12.6",
+    "lowdb": "^1.0.0",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/body-parser": "1.17.1",
     "@types/express": "^4.16.1",
+    "@types/lowdb": "^1.0.9",
     "@types/node": "^11.11.3",
     "ts-node-dev": "^1.0.0-pre.32",
     "tslint": "^5.13.1",
